infrastructure/configs/gateway.yaml
# ref: https://cert-manager.io/docs/usage/gateway/
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: gateway-system
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  gatewayClassName: cilium
  listeners:
    # required for TLS certificate request
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https-deanqx-com
      hostname: www.deanqx.com
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: www-deanqx-com-tls
            kind: Secret
    - name: https-staging-deanqx-com
      hostname: staging.deanqx.com
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: staging-deanqx-com-tls
            kind: Secret
    - name: https-home-assistant
      hostname: home.deanqx.com
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: home-deanqx-com-tls
            kind: Secret
    - name: https-nextcloud
      hostname: cloud.deanqx.com
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: cloud-deanqx-com-tls
            kind: Secret
    - name: https-monitor
      hostname: monitor.deanqx.com
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: monitor-deanqx-com-tls
            kind: Secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: gateway-system
spec:
  # ref: https://gateway-api.sigs.k8s.io/guides/user-guides/http-redirect-rewrite/
  parentRefs:
    - name: cilium-gateway
      namespace: gateway-system
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
